@@ -8,6 +8,7 @@ import java.util.Queue;
 import java.util.TreeMap;
 
 import br.com.gerenciaMemoria.model.DadosEntradaAlgoritmo;
+import br.com.gerenciaMemoria.model.NoSequencia;
 import br.com.gerenciaMemoria.model.NomeAlgoritmo;
 
 public class Lfu extends AlgoritmoDeGerencia {
@@ -16,151 +17,222 @@ public class Lfu extends AlgoritmoDeGerencia {
 		super(entrada, NomeAlgoritmo.LFU);
 	}
 
-	public boolean frequency(HashMap<String, TreeMap<Integer, Integer>> frequencia) {
-
-		ArrayList<Integer> freq = new ArrayList<>();
-		TreeMap<Integer, Integer> aux = new TreeMap<>();
-		for (String process : frequencia.keySet()) {
-			aux = frequencia.get(process);
+	
+	public boolean frequency(HashMap<String, TreeMap<Integer,Integer>> frequencia)
+	{
+		ArrayList<Integer> freq= new ArrayList<>();
+		TreeMap<Integer,Integer> aux= new TreeMap<>();
+		for(String process: frequencia.keySet())
+		{
+			aux=frequencia.get(process);
 			freq.addAll(aux.values());
-
+			
 		}
+
 		return Collections.max(freq).equals(Collections.min(freq));
-
+		
 	}
+	
 
-	public int retorne(HashMap<String, TreeMap<Integer, Integer>> frequencia,
-			HashMap<String, TreeMap<Integer, Integer>> tempoEntrada) {
-
-		TreeMap<Integer, Integer> dados = new TreeMap<>();
-		TreeMap<Integer, Integer> t = new TreeMap<>();
-
-		for (String process : frequencia.keySet()) {
-
-			for (Integer i : tempoEntrada.get(process).keySet()) {
-				t.put(tempoEntrada.get(process).get(i), i);
+	public int retorne(HashMap<String, TreeMap<Integer,Integer>> frequencia, HashMap<String, TreeMap<Integer,Integer>> tempoEntrada )
+	{
+		TreeMap<Integer,Integer> t= new TreeMap<>();
+		ArrayList<Integer> a= new ArrayList<>();
+		ArrayList<Integer> freq= new ArrayList<>();
+		
+		for(String s:frequencia.keySet())
+		{
+			for(Integer i:frequencia.get(s).keySet())
+			{
+				freq.add(frequencia.get(s).get(i));
+				
 			}
-
-			dados.put(t.lastKey(), tempoEntrada.get(process).get(t.lastKey()));
-
 		}
-
-		System.out.println(dados.lastKey());
-
-		return dados.lastKey();
-
+		
+		
+		for(String process: frequencia.keySet())
+		{
+		
+			for(Integer i:tempoEntrada.get(process).keySet())
+			{
+				
+				if(frequencia.get(process).get(i).equals(Collections.min(freq)))
+				{
+					
+					t.put(tempoEntrada.get(process).get(i), i);	
+					a.add(tempoEntrada.get(process).get(i));
+				}
+			}
+		
+		}
+		
+		return t.get(Collections.min(a));
 	}
-
+	
 	public double taxaErroGlobal() {
 		int totalErros = 0;
-
-		LinkedList<Integer> filaPaginas = new LinkedList<>();
-		LinkedList<String> filaProcessos = new LinkedList<>();
-		HashMap<String, TreeMap<Integer, Integer>> frequencia = new HashMap<>();
-		HashMap<String, TreeMap<Integer, Integer>> tempoEntrada = new HashMap<>();
-
-		for (int i = 0; i < entrada.getProcessos().size(); i++) {
+		HashMap<String, Queue<Integer>> dadosFila= new HashMap<>();
+		ArrayList<Integer> filaPaginas=new ArrayList<>();
+		ArrayList<String> filaProcessos= new ArrayList<>();
+		HashMap<String, TreeMap<Integer,Integer>> frequencia= new HashMap<>();
+		HashMap<String, TreeMap<Integer,Integer>> tempoEntrada= new HashMap<>();
+		int totalQuadros=0;
+	
+		
+		if (entrada.getAlocacao().equals("Igual")) 
+		{
+			totalQuadros=entrada.getTamanhoQuadros()/entrada.getProcessos().size();
+			totalQuadros=totalQuadros*entrada.getProcessos().size();
+		} 
+		
+		
+		else if(entrada.getAlocacao().equals("Proporcional"))
+		{
+			
+			int totalPaginas=0;
+			for(int i=0;i<entrada.getProcessos().size();i++)
+			{
+				totalPaginas+=entrada.getProcessos().get(i).getNumPaginas();
+			}
+		
+			int soma=0;
+			for(int i=0;i<entrada.getProcessos().size();i++)
+			{
+				int totalPaginasPr=entrada.getProcessos().get(i).getNumPaginas();
+				totalQuadros=(int) ((double)totalPaginasPr/totalPaginas*totalQuadros);
+				System.out.println(totalQuadros);
+				soma+=totalQuadros;
+			}
+			
+			totalQuadros=soma;
+		}
+			
+		
+			
+		for(int i=0;i<entrada.getProcessos().size();i++)
+		{
 			frequencia.put(entrada.getProcessos().get(i).getNome(), new TreeMap<>());
 			tempoEntrada.put(entrada.getProcessos().get(i).getNome(), new TreeMap<>());
+			dadosFila.put(entrada.getProcessos().get(i).getNome(), new LinkedList<>());
 		}
-
-		for (int i = 0; i < entrada.getSequencia().size(); i++) {
+		
+		for (int i = 0; i < entrada.getSequencia().size(); i++) 
+		{
 			String nomeProcesso = entrada.getSequencia().get(i).getProcesso();
 			int pagAcessada = entrada.getSequencia().get(i).getPaginaAcessada();
-
-			if (tempoEntrada.get(nomeProcesso).containsKey(pagAcessada) == false) {
-
-				if (filaPaginas.size() < entrada.getTamanhoQuadros()) {
-					frequencia.get(nomeProcesso).put(pagAcessada, 0);
+		
+			if(dadosFila.get(nomeProcesso).contains(pagAcessada)==false)
+			{
+				totalErros++;
+				
+				if(filaPaginas.size()<totalQuadros)
+				{
+					
 					filaPaginas.add(pagAcessada);
-					tempoEntrada.get(nomeProcesso).put(pagAcessada, i);
-					filaProcessos.add(nomeProcesso);
+					filaProcessos.add(nomeProcesso);		
+					tempoEntrada.get(nomeProcesso).put(pagAcessada,i);
+					frequencia.get(nomeProcesso).put(pagAcessada,-1);
+					dadosFila.get(nomeProcesso).add(pagAcessada);
 				}
-
+				
 				else {
-
-					if (frequency(frequencia) == true) {
-
-						int pagRemovida = filaPaginas.removeFirst();
-						String processoRemovido = filaProcessos.removeFirst();
+					
+					if(frequency(frequencia)==true)
+					{
+						int pagRemovida=filaPaginas.remove(0);
+						String processoRemovido=filaProcessos.remove(0);
 						frequencia.get(processoRemovido).remove(pagRemovida);
 						tempoEntrada.get(processoRemovido).remove(pagRemovida);
-
-						frequencia.get(nomeProcesso).put(pagAcessada, 0);
+						dadosFila.get(processoRemovido).remove(pagRemovida);
+	
+						frequencia.get(nomeProcesso).put(pagAcessada,-1);
 						filaPaginas.add(pagAcessada);
-						tempoEntrada.get(nomeProcesso).put(pagAcessada, i);
+						tempoEntrada.get(nomeProcesso).put(pagAcessada,i);
 						filaProcessos.add(nomeProcesso);
-
-					} else {
-						int pagRemovida = retorne(frequencia, tempoEntrada);
-						filaPaginas.remove(pagRemovida);
-
-						String processoRemovido = filaProcessos.remove(filaPaginas.lastIndexOf(pagRemovida));
+						dadosFila.get(nomeProcesso).add(pagAcessada);
+					} 
+					else
+					{
+		
+						int pagRemovida=retorne(frequencia,tempoEntrada);
+						String processoRemovido=filaProcessos.remove(filaPaginas.indexOf(pagRemovida));
+						filaPaginas.remove(filaPaginas.indexOf(pagRemovida));
 						frequencia.get(processoRemovido).remove(pagRemovida);
 						tempoEntrada.get(processoRemovido).remove(pagRemovida);
-
-						frequencia.get(nomeProcesso).put(pagAcessada, 0);
+						dadosFila.get(processoRemovido).remove(pagRemovida);
+					
+						frequencia.get(nomeProcesso).put(pagAcessada,-1);
 						filaPaginas.add(pagAcessada);
-						tempoEntrada.get(nomeProcesso).put(pagAcessada, i);
+						tempoEntrada.get(nomeProcesso).put(pagAcessada,i);
 						filaProcessos.add(nomeProcesso);
-
+						dadosFila.get(nomeProcesso).add(pagAcessada);
 					}
-
+					
+					
 				}
-
+				
+				
 			}
-
-			else {
-				int freq = frequencia.get(nomeProcesso).get(pagAcessada);
+			
+			else 
+			{
+				int freq=frequencia.get(nomeProcesso).get(pagAcessada);
 				freq++;
 				frequencia.get(nomeProcesso).put(pagAcessada, freq);
-
 			}
+			
 
 		}
-
-		return (double) totalErros / entrada.getSequencia().size();
+			System.out.println(totalErros+" "+entrada.getSequencia().size());
+			return (double) totalErros / entrada.getNumeroRequisicoes();
 
 	}
-
-	// Alocacao igual substitui��o local
-
+		
 	public double taxaErroIgual() {
 		int totalErros = 0;
 		int totalQuadros = 0;
 		HashMap<String, Queue<Integer>> filaPaginas = new HashMap<>();
 		HashMap<String, HashMap<Integer, Integer>> frequencia = new HashMap<>();
-		HashMap<String, HashMap<Integer, Integer>> tempoEntrada = new HashMap<>();
-		HashMap<String, Integer> tamanho = new HashMap<>();
-
-		if (entrada.getAlocacao().equals("Igual")) {
-			totalQuadros = entrada.getTamanhoQuadros() / entrada.getProcessos().size();
-
-			for (int i = 0; i < entrada.getProcessos().size(); i++) {
+		HashMap<String, HashMap<Integer,Integer>> tempoEntrada = new HashMap<>(); 
+		HashMap<String,Integer> tamanho= new HashMap<>();
+		
+	
+		if (entrada.getAlocacao().equals("Igual")) 
+		{
+			totalQuadros=entrada.getTamanhoQuadros()/entrada.getProcessos().size();
+			
+			
+			for(int i=0;i<entrada.getProcessos().size();i++)
+			{
 				tamanho.put(entrada.getProcessos().get(i).getNome(), totalQuadros);
-
+				
 			}
-
-		} else if (entrada.getAlocacao().equals("Proporcional")) {
-
-			int totalPaginas = 0;
-			for (int i = 0; i < entrada.getProcessos().size(); i++) {
-				totalPaginas += entrada.getProcessos().get(i).getNumPaginas();
-
+				
+		} 
+		else if(entrada.getAlocacao().equals("Proporcional")){
+			
+			int totalPaginas=0;
+			for(int i=0;i<entrada.getProcessos().size();i++)
+			{
+				totalPaginas+=entrada.getProcessos().get(i).getNumPaginas();
+				
 			}
-
-			for (int i = 0; i < entrada.getProcessos().size(); i++) {
-
-				int totalPaginasPr = entrada.getProcessos().get(i).getNumPaginas();
-				totalQuadros = entrada.getTamanhoQuadros();
-				totalQuadros = (int) ((double) totalPaginasPr / totalPaginas * totalQuadros);
+			
+			for(int i=0;i<entrada.getProcessos().size();i++)
+			{
+				
+				int totalPaginasPr=entrada.getProcessos().get(i).getNumPaginas();
+				totalQuadros=entrada.getTamanhoQuadros();
+				totalQuadros=(int) ((double)totalPaginasPr/totalPaginas*totalQuadros);
 				tamanho.put(entrada.getProcessos().get(i).getNome(), totalQuadros);
-
+				
 			}
-
+			
 		}
 
-		for (int i = 0; i < entrada.getProcessos().size(); i++) {
+
+		for (int i = 0; i < entrada.getProcessos().size(); i++) 
+		{
 			filaPaginas.put(entrada.getProcessos().get(i).getNome(), new LinkedList<>());
 			frequencia.put(entrada.getProcessos().get(i).getNome(), new HashMap<>());
 			tempoEntrada.put(entrada.getProcessos().get(i).getNome(), new HashMap<>());
@@ -170,38 +242,46 @@ public class Lfu extends AlgoritmoDeGerencia {
 			String nomeProcesso = entrada.getSequencia().get(i).getProcesso();
 			int pagAcessada = entrada.getSequencia().get(i).getPaginaAcessada();
 
-			if (filaPaginas.get(nomeProcesso).contains(pagAcessada) == false) {
+			if (filaPaginas.get(nomeProcesso).contains(pagAcessada) == false) 
+			{
 				totalErros++;
 
-				if (filaPaginas.get(nomeProcesso).size() < tamanho.get(nomeProcesso)) {
+				if (filaPaginas.get(nomeProcesso).size()<tamanho.get(nomeProcesso)) 
+				{
 
 					filaPaginas.get(nomeProcesso).add(pagAcessada);
 					frequencia.get(nomeProcesso).put(pagAcessada, 0);
 					tempoEntrada.get(nomeProcesso).put(pagAcessada, i);
-
-				} else {
-					if (frequency(frequencia, nomeProcesso) == false) {
+						
+				} else 
+				{
+					if (frequency(frequencia, nomeProcesso)==false) 
+					{
 
 						int pagRemovida = filaPaginas.get(nomeProcesso).remove();
 						frequencia.get(nomeProcesso).remove(pagRemovida);
 						tempoEntrada.get(nomeProcesso).remove(pagRemovida);
 						filaPaginas.get(nomeProcesso).add(pagAcessada);
-						frequencia.get(nomeProcesso).put(pagAcessada, 0);
-						tempoEntrada.get(nomeProcesso).put(pagAcessada, i);
+						frequencia.get(nomeProcesso).put(pagAcessada,0);
+						tempoEntrada.get(nomeProcesso).put(pagAcessada,i);
+						
+					
+					} else 
+					{
 
-					} else {
-
-						int pagRemovida = retorne(frequencia, tempoEntrada, nomeProcesso);
+						int pagRemovida=retorne(frequencia,tempoEntrada,nomeProcesso);						
 						filaPaginas.get(nomeProcesso).remove(pagRemovida);
 						frequencia.get(nomeProcesso).remove(pagRemovida);
 						tempoEntrada.get(nomeProcesso).remove(pagRemovida);
 						filaPaginas.get(nomeProcesso).add(pagAcessada);
-						frequencia.get(nomeProcesso).put(pagAcessada, 0);
-						tempoEntrada.get(nomeProcesso).put(pagAcessada, i);
-
+						frequencia.get(nomeProcesso).put(pagAcessada,0);
+						tempoEntrada.get(nomeProcesso).put(pagAcessada,i);
+						
+						
 					}
 				}
-			} else {
+			} else 
+			{
 
 				int freq = frequencia.get(nomeProcesso).get(pagAcessada);
 				freq++;
@@ -219,10 +299,11 @@ public class Lfu extends AlgoritmoDeGerencia {
 		HashMap<Integer, Integer> freq = map.get(process);
 		ArrayList<Integer> a = new ArrayList<>();
 
+		
 		for (Integer i : freq.keySet()) {
 			a.add(freq.get(i));
 		}
-
+			
 		int primeiro = a.get(0);
 		for (Integer i : a) {
 			if (i != primeiro) {
@@ -230,23 +311,22 @@ public class Lfu extends AlgoritmoDeGerencia {
 			}
 
 		}
-
+		
 		return chave;
 	}
 
-	private int retorne(HashMap<String, HashMap<Integer, Integer>> map, HashMap<String, HashMap<Integer, Integer>> time,
-			String process) {
+	private int retorne(HashMap<String, HashMap<Integer, Integer>> map,HashMap<String, HashMap<Integer, Integer>> time ,String process) {
 
 		HashMap<Integer, Integer> freq = map.get(process);
 		ArrayList<Integer> a = new ArrayList<>();
-		HashMap<Integer, Integer> timeEntry = time.get(process);
-
+		HashMap<Integer, Integer> timeEntry=time.get(process);
+		
 		for (Integer i : freq.keySet()) {
 			a.add(freq.get(i));
 		}
 
-		int menorFrequencia = Collections.min(a);
-		TreeMap<Integer, Integer> t = new TreeMap<>();
+		int menorFrequencia=Collections.min(a);
+		TreeMap<Integer,Integer> t= new TreeMap<>();
 		for (Integer i : freq.keySet()) {
 			if (freq.get(i) == menorFrequencia) {
 				t.put(timeEntry.get(i), i);
